--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "phaser3-typescript-project-template",
-    "version": "1.2.0",
-    "description": "A Phaser 3 Project Template using Rollup and TypeScript",
+    "name": "phaser-playground",
+    "version": "0.1.0",
+    "description": "A Phaser Playground",
     "main": "src/game.ts",
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
@@ -10,21 +10,20 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/brannonh/phaser3-typescript-project-template.git"
+        "url": "git+https://github.com/brannonh/phaser-playground.git"
     },
     "authors": [
-        "Richard Davey <rich@photonstorm.com> (http://www.photonstorm.com)",
         "Brannon Hall <brannonh.dev@gmail.com>"
     ],
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/brannonh/phaser3-typescript-project-template/issues"
+        "url": "https://github.com/brannonh/phaser-playground/issues"
     },
-    "homepage": "https://github.com/brannonh/phaser3-typescript-project-template#readme",
+    "homepage": "https://github.com/brannonh/phaser-playground#readme",
     "devDependencies": {
         "@rollup/plugin-replace": "^3.0.0",
         "phaser": "^3.55.2",
-        "rollup": "^2.56.0",
+        "rollup": "^2.56.2",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-serve": "^1.1.0",
