--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     },
     "homepage": "https://github.com/brannonh/phaser-playground#readme",
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^20.0.0",
+        "@rollup/plugin-node-resolve": "^13.0.4",
         "@rollup/plugin-replace": "^3.0.0",
+        "@rollup/plugin-typescript": "^8.2.5",
         "phaser": "^3.55.2",
         "rollup": "^2.56.2",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-serve": "^1.1.0",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.30.0",
+        "tslib": "^2.1.0",
         "typescript": "^4.3.5"
     }
 }
